--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ buildscript {
     }
 }
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 repositories {
     jcenter()
@@ -75,6 +77,7 @@ dependencies {
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.1.3'
     implementation 'com.jakewharton:butterknife:6.1.0'
     annotationProcessor 'com.jakewharton:butterknife:6.1.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 }
 
